fixing output format
