# swagger_server/swagger/swagger.yaml
@@ -39,7 +39,7 @@ paths:
         schema:
           type: string
         example: CBBTTTSNNNNNN
-      - name: startTime1
+      - name: startTime
         in: query
         description: Start time of the timeseries
         required: true
@@ -49,7 +49,7 @@ paths:
           type: string
           format: date-time
         example: 2023-02-24T00:00:00Z
-      - name: endTime1
+      - name: endTime
         in: query
         description: End time of the timeseries
         required: true
@@ -79,26 +79,6 @@ paths:
           type: string
           default: csv
         example: csv
-      - name: startTime
-        in: query
-        description: Start time of the timeseries
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: string
-          format: date-time
-        example: 2023-02-24T00:00:00Z
-      - name: endTime
-        in: query
-        description: End time of the timeseries
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: string
-          format: date-time
-        example: 2023-02-24T12:59:59Z
       responses:
         "200":
           description: OK
